[gd_scene format=4 uid="uid://dr64t2hjb08oy"]

[ext_resource type="Script" uid="uid://swrn2d64qvmd" path="res://level.gd" id="1_0b4ue"]
[ext_resource type="Texture2D" uid="uid://dh4s6l6pb67fo" path="res://tilemap-Sheet.svg" id="1_oi3di"]
[ext_resource type="Texture2D" uid="uid://clw845yqpgard" path="res://icon.svg" id="1_u52ul"]
[ext_resource type="Script" uid="uid://cqbgi7fbmu3xl" path="res://player.gd" id="1_vonw3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0b4ue"]
texture = ExtResource("1_oi3di")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
7:1/0 = 0
6:1/0 = 0
5:1/0 = 0
4:1/0 = 0
2:2/0 = 0
1:2/0 = 0
0:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
6:3/0 = 0
7:3/0 = 0
5:3/0 = 0
4:3/0 = 0
3:3/0 = 0
2:3/0 = 0
1:3/0 = 0
0:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:5/0 = 0
6:5/0 = 0
5:5/0 = 0
4:5/0 = 0
3:5/0 = 0
2:5/0 = 0
1:5/0 = 0
0:5/0 = 0

[sub_resource type="TileSet" id="TileSet_f2txt"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_0b4ue")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vonw3"]
size = Vector2(14, 14)

[node name="level" type="Node2D" unique_id=170661356]
script = ExtResource("1_0b4ue")

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=1853726450]
tile_map_data = PackedByteArray("AAAYAAEAAAAGAAUAAAAZAAAAAAAGAAUAAAAZAAEAAAADAAUAAAAZAAIAAAAGAAUAAAAZAAoAAAAGAAUAAAAZAAsAAAAGAAUAAAAaAAAAAAAGAAUAAAAaAAEAAAADAAUAAAAaAAIAAAADAAUAAAAaAAMAAAAFAAIAAAAaAAYAAAAFAAIAAAAaAAkAAAAGAAUAAAAaAAoAAAADAAUAAAAaAAsAAAADAAUAAAAbAAEAAAAHAAIAAAAbAAIAAAADAAUAAAAbAAMAAAAHAAIAAAAbAAQAAAAFAAIAAAAbAAgAAAAGAAUAAAAbAAkAAAADAAUAAAAbAAoAAAAGAAUAAAAbAAsAAAAGAAUAAAAcAAEAAAAHAAIAAAAcAAIAAAAHAAIAAAAcAAMAAAAFAAIAAAAcAAQAAAAFAAIAAAAcAAUAAAAFAAIAAAAcAAYAAAAFAAIAAAAcAAgAAAAGAAUAAAAcAAkAAAADAAUAAAAcAAoAAAAHAAIAAAAcAAsAAAAFAAIAAAAdAAIAAAAHAAIAAAAdAAMAAAAHAAIAAAAdAAQAAAAHAAIAAAAdAAUAAAAFAAIAAAAdAAYAAAAHAAIAAAAdAAcAAAAFAAIAAAAdAAkAAAAHAAIAAAAdAAoAAAAFAAIAAAAdAAsAAAAFAAIAAAAeAAIAAAAFAAIAAAAeAAMAAAAHAAIAAAAeAAQAAAAFAAIAAAAeAAUAAAAFAAIAAAAeAAYAAAAHAAIAAAAeAAcAAAAHAAIAAAAeAAgAAAAFAAIAAAAeAAkAAAAFAAIAAAAeAAoAAAAHAAIAAAAeAAsAAAAFAAIAAAAfAAIAAAAFAAIAAAAfAAMAAAAHAAIAAAAfAAQAAAAHAAIAAAAfAAUAAAAHAAIAAAAfAAYAAAAHAAIAAAAfAAcAAAAHAAIAAAAfAAgAAAAHAAIAAAAfAAkAAAAHAAIAAAAfAAoAAAAHAAIAAAAfAAsAAAAFAAIAAAAgAAIAAAAFAAIAAAAgAAMAAAAHAAIAAAAgAAQAAAAHAAIAAAAgAAUAAAAHAAIAAAAgAAYAAAAHAAIAAAAgAAcAAAAHAAIAAAAgAAgAAAAHAAIAAAAgAAkAAAAHAAIAAAAgAAoAAAAHAAIAAAAgAAsAAAAFAAIAAAAhAAIAAAAFAAIAAAAhAAMAAAAHAAIAAAAhAAQAAAAHAAIAAAAhAAUAAAAHAAIAAAAhAAYAAAADAAEAAAAhAAcAAAAHAAIAAAAhAAgAAAAHAAIAAAAhAAkAAAAHAAIAAAAhAAoAAAAHAAIAAAAhAAsAAAAFAAIAAAAiAAIAAAAFAAIAAAAiAAMAAAAHAAIAAAAiAAQAAAAHAAIAAAAiAAUAAAADAAEAAAAiAAYAAAABAAEAAAAiAAcAAAADAAEAAAAiAAgAAAAHAAIAAAAiAAkAAAAHAAIAAAAiAAoAAAAHAAIAAAAiAAsAAAAFAAIAAAAjAAIAAAAFAAIAAAAjAAMAAAAHAAIAAAAjAAQAAAAHAAIAAAAjAAUAAAAHAAIAAAAjAAYAAAADAAEAAAAjAAcAAAAHAAIAAAAjAAgAAAAHAAIAAAAjAAkAAAAHAAIAAAAjAAoAAAAHAAIAAAAjAAsAAAAFAAIAAAAkAAIAAAAFAAIAAAAkAAMAAAAHAAIAAAAkAAQAAAAHAAIAAAAkAAUAAAAHAAIAAAAkAAYAAAAHAAIAAAAkAAcAAAAHAAIAAAAkAAgAAAAHAAIAAAAkAAkAAAAHAAIAAAAkAAoAAAAHAAIAAAAkAAsAAAAFAAIAAAAlAAIAAAAFAAIAAAAlAAMAAAAHAAIAAAAlAAQAAAAHAAIAAAAlAAUAAAAHAAIAAAAlAAYAAAAHAAIAAAAlAAcAAAAHAAIAAAAlAAgAAAAHAAIAAAAlAAkAAAAHAAIAAAAlAAoAAAAHAAIAAAAlAAsAAAAFAAIAAAAmAAIAAAAFAAIAAAAmAAMAAAAHAAIAAAAmAAQAAAAHAAIAAAAmAAUAAAAHAAIAAAAmAAYAAAAHAAIAAAAmAAcAAAAHAAIAAAAmAAgAAAAHAAIAAAAmAAkAAAADAAUAAAAmAAoAAAAHAAIAAAAmAAsAAAAFAAIAAAAnAAMAAAAFAAIAAAAnAAQAAAAHAAIAAAAnAAUAAAAHAAIAAAAnAAYAAAAHAAIAAAAnAAcAAAAHAAIAAAAnAAgAAAAHAAIAAAAnAAkAAAADAAUAAAAnAAoAAAADAAUAAAAoAAQAAAAFAAIAAAAoAAUAAAAHAAIAAAAoAAYAAAAHAAIAAAAoAAcAAAAHAAIAAAAoAAgAAAADAAUAAAAoAAkAAAADAAUAAAAoAAoAAAAGAAUAAAAoAAsAAAADAAUAAAApAAUAAAAFAAIAAAApAAYAAAAFAAIAAAApAAcAAAAFAAIAAAApAAgAAAAHAAIAAAApAAkAAAAGAAUAAAApAAoAAAAGAAUAAAApAAsAAAADAAUAAAAqAAkAAAADAAUAAAAqAAoAAAADAAUAAAAAAAAAAAAHAAIAAAAAAAEAAAAHAAIAAAAAAAIAAAAHAAIAAAAAAAMAAAAFAAIAAAAAAAQAAAAFAAIAAAABAAQAAAAEAAIAAAACAAQAAAAEAAIAAAADAAQAAAAEAAIAAAADAAMAAAAGAAIAAAAEAAMAAAAGAAIAAAAFAAMAAAAGAAIAAAAGAAMAAAAGAAIAAAAHAAMAAAAHAAIAAAAHAAIAAAAHAAIAAAAHAAEAAAAHAAIAAAABAAAAAAAHAAIAAAABAAEAAAAHAAIAAAABAAIAAAAHAAIAAAABAAMAAAAFAAIAAAACAAMAAAAFAAIAAAAEAAIAAAAHAAIAAAAFAAIAAAAHAAIAAAAGAAIAAAAHAAIAAAAFAAAAAAAHAAIAAAAEAAAAAAAHAAIAAAADAAAAAAAHAAIAAAADAAEAAAAHAAIAAAADAAIAAAAHAAIAAAACAAAAAAAHAAIAAAACAAIAAAAHAAIAAAAEAAEAAAAHAAIAAAACAAEAAAAHAAIAAAAAAAUAAAAAAAIAAAABAAUAAAAAAAIAAAACAAUAAAAAAAIAAAADAAUAAAABAAIAAAAEAAUAAAABAAIAAAAFAAUAAAABAAIAAAAGAAUAAAACAAIAAAAEAAQAAAADAAIAAAAFAAQAAAADAAIAAAAGAAQAAAADAAIAAAAHAAQAAAACAAIAAAAHAAUAAAACAAIAAAAAAAYAAAAEAAEAAAABAAYAAAAFAAEAAAACAAYAAAAGAAEAAAADAAYAAAAHAAEAAAAEAAYAAAAHAAEAAAAFAAYAAAAHAAEAAAAGAAYAAAAHAAEAAAAHAAYAAAADAAQAAAAAAAcAAAACAAEAAAABAAcAAAADAAEAAAACAAcAAAAEAAEAAAADAAcAAAAFAAEAAAAEAAcAAAAGAAEAAAAFAAcAAAAHAAEAAAAGAAcAAAAHAAEAAAAHAAcAAAADAAQAAAAAAAgAAAAAAAEAAAABAAgAAAABAAEAAAACAAgAAAACAAEAAAADAAgAAAADAAEAAAAEAAgAAAADAAQAAAAFAAgAAAADAAQAAAAGAAgAAAADAAQAAAAHAAgAAAADAAQAAAAFAAEAAAAHAAIAAAAGAAEAAAAHAAIAAAAGAAAAAAAHAAIAAAAHAAAAAAAHAAIAAAAIAAAAAAAHAAEAAAAIAAEAAAAHAAEAAAAIAAIAAAAHAAEAAAAIAAMAAAAAAAMAAAAIAAQAAAAHAAEAAAAIAAUAAAAHAAEAAAAJAAQAAAAHAAEAAAAJAAMAAAAAAAMAAAAJAAIAAAAAAAMAAAAKAAEAAAABAAMAAAAKAAAAAAAEAAEAAAAKAAIAAAABAAMAAAAKAAMAAAAEAAEAAAAKAAQAAAAEAAEAAAAKAAUAAAAFAAEAAAAJAAUAAAAGAAEAAAAJAAAAAAAHAAEAAAAJAAEAAAABAAMAAAAKAAYAAAAFAAEAAAAKAAcAAAABAAEAAAAJAAcAAAAFAAEAAAAJAAYAAAAGAAEAAAAJAAgAAAADAAQAAAAKAAgAAAADAAQAAAALAAcAAAABAAEAAAALAAYAAAABAAEAAAALAAUAAAABAAEAAAAMAAUAAAABAAEAAAAMAAQAAAABAAEAAAAMAAMAAAABAAEAAAANAAMAAAAGAAMAAAANAAIAAAADAAMAAAANAAEAAAADAAMAAAAMAAEAAAADAAMAAAAMAAIAAAADAAMAAAALAAIAAAACAAMAAAALAAMAAAABAAEAAAALAAQAAAABAAEAAAAMAAAAAAABAAEAAAANAAAAAAABAAEAAAALAAAAAAABAAEAAAALAAEAAAACAAMAAAANAAQAAAAHAAMAAAANAAUAAAAAAAEAAAANAAYAAAAAAAEAAAANAAcAAAAAAAEAAAANAAgAAAAAAAEAAAAMAAgAAAAAAAEAAAALAAgAAAAAAAEAAAAMAAcAAAAAAAEAAAAMAAYAAAAAAAEAAAAIAAgAAAADAAQAAAAIAAcAAAAGAAEAAAAIAAYAAAAHAAEAAAAOAAEAAAAGAAUAAAAOAAIAAAAFAAMAAAAPAAEAAAAGAAUAAAAPAAIAAAAFAAMAAAAOAAMAAAAFAAMAAAAPAAMAAAAFAAMAAAAOAAQAAAAGAAMAAAAPAAQAAAAGAAMAAAAQAAQAAAAGAAMAAAAQAAMAAAAGAAMAAAAOAAUAAAAHAAMAAAAPAAUAAAAHAAMAAAAQAAUAAAAHAAMAAAAQAAYAAAAHAAMAAAAPAAYAAAAHAAMAAAARAAUAAAAHAAMAAAARAAQAAAAHAAMAAAAQAAIAAAAGAAUAAAARAAMAAAAGAAUAAAAQAAEAAAAFAAUAAAARAAIAAAAFAAUAAAAQAAAAAAACAAUAAAARAAAAAAACAAUAAAARAAEAAAACAAUAAAASAAEAAAACAAUAAAASAAIAAAACAAUAAAAPAAAAAAAAAAUAAAASAAAAAAAAAAUAAAATAAEAAAAAAAUAAAATAAIAAAAAAAUAAAASAAMAAAAFAAUAAAASAAQAAAAGAAUAAAATAAMAAAAGAAUAAAAUAAIAAAAGAAUAAAAUAAEAAAAGAAUAAAATAAAAAAAGAAUAAAASAP//AAAGAAUAAAARAP//AAAGAAUAAAAQAP//AAAGAAUAAAAPAP//AAAGAAUAAAAKAAkAAAAGAAQAAAAJAAkAAAAGAAQAAAAIAAkAAAAGAAQAAAAHAAkAAAAGAAQAAAAGAAkAAAAGAAQAAAAFAAkAAAAGAAQAAAAEAAkAAAAGAAQAAAAEAAoAAAAGAAQAAAAEAAsAAAAGAAQAAAAFAAsAAAAGAAQAAAAGAAsAAAAGAAQAAAAHAAsAAAAGAAQAAAAIAAsAAAAGAAQAAAAJAAsAAAAGAAQAAAAKAAsAAAAGAAQAAAAKAAoAAAAGAAQAAAAJAAoAAAAGAAQAAAAIAAoAAAAGAAQAAAAHAAoAAAAHAAQAAAAGAAoAAAAGAAQAAAAFAAoAAAAGAAQAAAADAAoAAAAGAAQAAAALAAoAAAAGAAQAAAALAAkAAAAHAAQAAAAMAAoAAAAHAAQAAAALAAsAAAAHAAQAAAADAAkAAAADAAQAAAACAAoAAAADAAQAAAADAAsAAAADAAQAAAAEAAwAAAADAAQAAAAFAAwAAAADAAQAAAAGAAwAAAADAAQAAAAHAAwAAAADAAQAAAAIAAwAAAADAAQAAAAJAAwAAAADAAQAAAAKAAwAAAADAAQAAAADAAwAAAAAAAAAAAACAAwAAAAAAAAAAAABAAwAAAAAAAAAAAAAAAwAAAAAAAAAAAABAAsAAAAAAAAAAAACAAsAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAoAAAAAAAAAAAABAAoAAAAAAAAAAAABAAkAAAAAAAAAAAAAAAkAAAAAAAAAAAACAAkAAAAAAAAAAAAMAAkAAAAAAAAAAAANAAkAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAANAAsAAAAAAAAAAAANAAwAAAAAAAAAAAAMAAwAAAAAAAAAAAALAAwAAAAAAAAAAAAMAAsAAAAAAAAAAAANAAoAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_f2txt")

[node name="Player" type="Area2D" parent="." unique_id=33533620]
z_index = 1
position = Vector2(40, 24)
script = ExtResource("1_vonw3")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Player" unique_id=260936694]
scale = Vector2(0.125, 0.125)
texture = ExtResource("1_u52ul")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player" unique_id=514566668]
shape = SubResource("RectangleShape2D_vonw3")

[node name="Camera2D" type="Camera2D" parent="." unique_id=721818192]
position = Vector2(185, 104)
zoom = Vector2(3.125, 3.125)

[node name="TideTimer" type="Timer" parent="." unique_id=1438488177]
wait_time = 3.0
autostart = true

[connection signal="moving" from="Player" to="." method="_on_player_moving"]
[connection signal="timeout" from="TideTimer" to="." method="_on_tide_timer_timeout"]
